# rucksfs

./: .claudeignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  METADATA_SERVER_CONSTRUCTION.md  QUICK_CONSTRUCTION_REFERENCE.md  README.md  build_log.txt  defense_presentation.pptx  server_test.txt  test_output.txt
.claude/: settings.json
.claude/agents/: test-runner.md
.claude/commands/: run-test.md
.claude/rules/: agent-behavior.md  code-style.md  git-commits.md  testing.md
.claude/skills/latex-paper-polisher/: SKILL.md
.claude/skills/real-env-test/: SKILL.md  phase1-collection.md  phase2-generation.md
.codebuddy/plan/delta-entries/: requirements.md  task-item.md
.codebuddy/plan/metadata-kv-research/: requirements.md  task-item.md
benchmark/: README.md  local_run.sh  report_generator.py  run_all.sh
benchmark/bench-tool/: .gitignore  AGENT_GUIDE.md  Cargo.toml  optimization-log.md
benchmark/bench-tool/src/: main.rs  ops.rs  report.rs  runner.rs  setup.rs
benchmark/correctness/: posix_conformance.sh  run_pjdfstest.sh
benchmark/performance/: concurrent_stress.sh  io_throughput.sh  metadata_ops.sh
client/: Cargo.toml
client/src/: client.rs  embedded.rs  fuse.rs  lib.rs  main.rs  vfs_core.rs
core/: Cargo.toml
core/src/: lib.rs
dataserver/: Cargo.toml
dataserver/src/: lib.rs
demo/: Cargo.toml
demo/src/: main.rs
demo/tests/: integration_test.rs  stress_test.rs
docs/: TODO.md  architecture-deep-dive.md  bench-analysis.md  benchmark-archive-legacy.md  benchmark-plan-v2.md  benchmark-plan.md  benchmark-report-v2.md  benchmark-report.md  commlayer-optim-plan.md  controlled-benchmark-report.md  delta-bottleneck-diagnosis.md  demo-guide.md  deployment.md  design.md  gap-analysis.md  guide.md  metadata-kv-research.md  opening-report.md  opening.tex  optimization-plan.md  performance-optimizations.md  round3-phase1-findings.md  round3-unified-benchmark-plan.md  standalone-analysis.md
docs/plans/: 2026-03-05-concurrency-optimization-design.md  2026-03-05-concurrency-optimization-plan.md  2026-03-06-auto-perf-loop-design.md  2026-03-06-auto-perf-loop-plan.md  2026-03-06-per-inode-data-location-design.md  2026-03-06-per-inode-data-location-plan.md  2026-03-06-rocksdb-storage-fixes.md  2026-03-06-rucksfs-bench-design.md  2026-03-06-rucksfs-bench-plan.md  README.md
docs/presentation/: opening.html
docs/superpowers/plans/: 2026-03-13-perf-optimization-loop.md
docs/superpowers/specs/: 2026-03-13-perf-optimization-loop-design.md
docs/thesis-template/: .latexmkrc  AGENT_RULES.md  BENCHMARK_ANALYSIS_NOTES.md  BENCHMARK_RATIONALE.md  DIAGNOSIS_REPORT.md  FIGURES_TODO.md  FORMAT_NON_COMPLIANCE_SUMMARY.md  FUTURE_TESTS.md  Makefile  macros.sty  main.tex  ref.bib
docs/thesis-template/body/: abstract-ch.tex  abstract-en.tex  acknowledgement.tex  conclusion.tex  experiments.tex  implementation.tex  introduction.tex  method.tex  references.tex  related_works.tex
docs/thesis-template/images/: architecture.html  delta_lazy_fold.html  key_mapping.html  lsm-tree.html  rename_lock_order.html
docs/thesis-template/template/: hust.cls  packages.sty
infra/tencent-bench/: .gitignore  README.md  instances.tf  main.tf  outputs.tf  shunjiecuitest.pem  terraform.tfvars.example  tfplan  variables.tf
infra/tencent-bench-v3/: README.md  instances.tf  main.tf  outputs.tf  variables.tf
infra/tencent-bench-v3/scripts/: init-data.sh  init-meta.sh  init-server-juicefs.sh  init-server-tikv.sh
infra/tencent-bench/scripts/: init-client.sh  init-data.sh  init-meta.sh  init-server-nfs.sh  init-server-rucksfs.sh
infra/tencent-grpc-direct/: .gitignore  init-client.sh  init-server.sh  main.tf
rpc/: Cargo.toml  build.rs
rpc/proto/: data.proto  fuse.proto  metadata.proto
rpc/src/: auth.rs  client.rs  data_client.rs  data_server.rs  framing.rs  lib.rs  message.rs  metadata_client.rs  metadata_server.rs  server.rs  tls.rs
scripts/: e2e_fuse_test.sh  generate_defense_ppt.js
scripts/benchmark/: run_controlled_benchmark.sh  run_full_benchmark.sh  run_practical_benchmark.sh
scripts/benchmark/v2/: bench_common.sh  bench_juicefs.sh  bench_juicefs_tikv.sh  bench_network.sh  bench_nfs.sh  bench_rucksfs.sh  bench_thread_scan.sh
server/: Cargo.toml
server/src/: cache.rs  compaction.rs  delta.rs  fsck.rs  lib.rs  main.rs
server/tests/: fsck_test.rs  integration.rs
storage/: Cargo.toml
storage/src/: allocator.rs  dummy.rs  encoding.rs  lib.rs  memory.rs  rawdisk.rs  rocks.rs
testing/: .gitignore  README.md  Taskfile.yml  env.example.yml
testing/bench-v2/: README.md  orchestrator.sh
testing/bench-v2/results-v2-n2/: juicefs-tikv_easy_np2.txt  juicefs-tikv_hard_np2.txt  nfs_easy_np2.txt  nfs_hard_np2.txt  rucksfs-delta_easy_np2.txt  rucksfs-delta_hard_np2.txt  rucksfs-nodelta_easy_np2.txt  rucksfs-nodelta_hard_np2.txt  summary.csv
testing/bench-v2/results-v2-n32/: juicefs-tikv_easy_np32.txt  juicefs-tikv_hard_np32.txt  nfs_easy_np32.txt  nfs_hard_np32.txt  rucksfs-delta_easy_np32.txt  rucksfs-delta_hard_np32.txt  rucksfs-nodelta_easy_np32.txt  rucksfs-nodelta_hard_np32.txt  summary.csv
testing/bench-v2/results-v2-n64/: juicefs-tikv_hard_np64.txt  nfs_easy_np64.txt  nfs_hard_np64.txt  rucksfs-delta_easy_np64.txt  rucksfs-delta_hard_np64.txt  rucksfs-nodelta_easy_np64.txt  rucksfs-nodelta_hard_np64.txt  summary.csv
testing/bench-v2/results-v2-n8/: juicefs-tikv_easy_np8.txt  juicefs-tikv_hard_np8.txt  nfs_easy_np8.txt  nfs_hard_np8.txt  rucksfs-delta_easy_np8.txt  rucksfs-delta_hard_np8.txt  rucksfs-nodelta_easy_np8.txt  rucksfs-nodelta_hard_np8.txt  summary.csv
testing/bench-v2/results-v2-n96/: nfs_easy_np96.txt  nfs_hard_np96.txt  rucksfs-delta_easy_np96.txt  rucksfs-delta_hard_np96.txt  rucksfs-nodelta_easy_np96.txt  rucksfs-nodelta_hard_np96.txt  summary.csv
testing/bench-v3/: README.md  orchestrator.sh
testing/results/: SUMMARY.md  pjdfstest_final_20260424.txt
testing/round3_scripts/: master-orchestrator.sh  parse-results.py  run-mdtest.sh  setup-ssh-mesh.sh  switch-sut.sh
testing/scripts/: collect-logs.sh  collect-metrics.sh  remote-setup.sh
(+240 files in other folders)
