[workspace]
members = [
  "core",
  "storage",
  "server",
  "client",
  "rpc",
  "demo",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/csjgg/rucksfs"
authors = ["csjgg"]

[workspace.dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rocksdb = "0.22"
tempfile = "3"
