[package]
name = "rucksfs-client"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
rucksfs-core = { path = "../core" }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "signal"] }

[target.'cfg(target_os = "linux")'.dependencies]
fuse3 = { version = "0.8", features = ["tokio-runtime", "unprivileged"] }
libc = "0.2"
bytes = "1"
futures-util = "0.3"
