[package]
name = "rucksfs-dataserver"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
rucksfs-core = { path = "../core" }
rucksfs-storage = { path = "../storage" }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
