[package]
name = "rucksfs-rpc"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
rucksfs-core = { path = "../core" }
async-trait = "0.1"
tokio = { version = "1", features = ["net", "io-util", "rt", "sync"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
