[package]
name = "rucksfs-rpc"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
rucksfs-core = { path = "../core" }
async-trait = "0.1"
tokio = { version = "1", features = ["net", "io-util", "rt", "sync", "macros", "fs"] }
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tokio-rustls = "0.26"
rustls-pemfile = "2"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = ["limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
constant_time_eq = "0.3"

[build-dependencies]
tonic-build = "0.12"
