[package]
name = "rucksfs-server"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
rucksfs-core = { path = "../core" }
rucksfs-storage = { path = "../storage" }
rucksfs-rpc = { path = "../rpc" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
