[package]
name = "rucksfs-server"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
rucksfs-core = { path = "../core" }
rucksfs-storage = { path = "../storage" }
async-trait = { workspace = true }
libc = "0.2"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lru = "0.12"

[dev-dependencies]
rucksfs-client = { path = "../client" }
rucksfs-dataserver = { path = "../dataserver" }
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = { workspace = true }
